# Roboy_kindyn

./: CMakeLists copy.txt  CMakeLists.txt  CMakeLists_ros2.txt  CableLengthController_plugin_ros2.xml  CableLengthVelocityController_plugin_ros2.xml  ForcePositionController_plugin_ros2.xml  README.md  TorquePositionController_plugin_ros2.xml  package.xml  package_ros2.xml
include/kindyn/: robot_ros2.hpp
src/: kinematics_ros2.cpp  robot copy.cpp  robot_ros2.cpp  vrpuppet_ros2.cpp
src/controller/: cableLengthController_ros2.cpp  cableLengthVelocityController_ros2.cpp  forcePositionController_ros2.cpp  torquePositionController_ros2.cpp
src/robots/: upper_body_ros2.cpp
