<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kindyn</name>
  <version>0.0.0</version>
  <description>kinematic/dynamic/control for cardsflow robots</description>
  <maintainer email="st@gi.ai">Simon Trendel</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>rosbag2</depend>
  <depend>std_msgs</depend>

  <depend>common_utilities</depend>
  <depend>controller_interface</depend>
  <depend>roboy_middleware_msgs</depend>
  <depend>roboy_simulation_msgs</depend>


  <exec_depend>message_generation</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_depend>qpOASES</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
